--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <nav>
             <h1><code>Qu:\Ote\<u>4</u>Everyone</code></h1>
             <ul>
-                <li><a href="#seeAllQuote"><h2> See all quote </h2></a></li>
-                <li><a href="#makeNewOne"><h2> Create a new one </h2></a></li>
+                <li><a href="#seeAllQuote"><h2> See all quote 👩🏻‍💻 </h2></a></li>
+                <li><a href="#makeNewOne"><h2> Create a new one ✍🏽 </h2></a></li>
             </ul>
         </nav>
         <p> 
-            <h1>QuoteForEveryone <sup>+++</sup></h1>
+            <h1>QuoteForEveryone ✋🏿 <sup>+++</sup></h1>
              <blockquote>
-                <b><u>Everyone</u></b> can send their <em>elan vital</em> for <b>other people</b> <mark>around the world</mark> through <code>blockchain</code>. 
+                <b><u>Everyone</u></b> can send their <em>elan vital</em> for <b>other people</b> <mark>around the world</mark> through <code>blockchain🍻</code>. 
             </blockquote>
             <cite> – <a href="https://github.com/fahmisme"> Fahmisme </a>, <s>man behind it</s>.</cite>
         </p>
@@ -37,19 +37,25 @@
             </p>
         </section>
                 <section id="showQuote">
-                </section>
-
+        </section>
         <hr>
-
         <section id="makeNewOne">
-            <p>What your <mark>note</mark> for today :
-                <input type="text" id="enterNote" placeholder="Love is only for a dumb man..." size="24px">
-                <button type="button" id="setNote">Throw it, <i>Pennywise!</i></button> <br>
-            </p>
+            <article>
+                <p>
+                    <h2>Hei,</h2>
+                    add your <mark>elan vital</mark> for <code>everyone</code> :
+                </p>
+                <p>
+                    <input type="text" id="enterQuote" placeholder="Your quote : Deo volente.."> 
+                    <input type="text" id="enterAuthor" placeholder="Author : Don Juan">
+                    <button type="button" id="setQuote">Add it, <i>Don Agusto!</i></button> <br>
+                </p>
+            </article>
         </section>
     </main>
+    <hr>
     <footer>
-        <p>Made <kbd>without</kbd> <span style="color: #e25555;">&hearts;</span> in Blockchain
+        <p>Made <kbd>without</kbd> <span style="color: #e25555;">&hearts;</span> in Ethereum Testnet (Sepolia) 🚀
         </p>
     </footer>
 
